// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > no query, anonymous > queries 1`] = `
[
  "profiles:select",
]
`;

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > no query, anonymous > tree 1`] = `
{
  "children": [
    {
      "children": "Players",
      "props": {
        "className": "mb-6 text-xl font-black text-white",
      },
      "t": "h1",
    },
    {
      "children": {
        "children": null,
        "props": {
          "className": "w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-sm text-white placeholder:text-slate-600 focus:border-violet-500 focus:outline-none",
          "defaultValue": "",
          "name": "q",
          "placeholder": "Search by username or name…",
          "type": "search",
        },
        "t": "input",
      },
      "props": {
        "action": "/players",
        "className": "mb-6",
      },
      "t": "form",
    },
    {
      "children": [
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player1",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 1",
              "equipped_avatar_border": null,
              "goals_conceded": 11,
              "goals_scored": 29,
              "id": "p1",
              "kyc_verified": false,
              "losses": 1,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 980,
              "total_matches": 12,
              "total_titles": 1,
              "username": "player1",
              "wins": 11,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player2",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 2",
              "equipped_avatar_border": null,
              "goals_conceded": 12,
              "goals_scored": 28,
              "id": "p2",
              "kyc_verified": false,
              "losses": 2,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 960,
              "total_matches": 12,
              "total_titles": 1,
              "username": "player2",
              "wins": 10,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player3",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 3",
              "equipped_avatar_border": null,
              "goals_conceded": 13,
              "goals_scored": 27,
              "id": "p3",
              "kyc_verified": true,
              "losses": 3,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 940,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player3",
              "wins": 9,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player4",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 4",
              "equipped_avatar_border": null,
              "goals_conceded": 14,
              "goals_scored": 26,
              "id": "p4",
              "kyc_verified": false,
              "losses": 4,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 920,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player4",
              "wins": 8,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player5",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 5",
              "equipped_avatar_border": null,
              "goals_conceded": 15,
              "goals_scored": 25,
              "id": "p5",
              "kyc_verified": false,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 900,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player5",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player6",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 6",
              "equipped_avatar_border": null,
              "goals_conceded": 16,
              "goals_scored": 24,
              "id": "p6",
              "kyc_verified": true,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 880,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player6",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player7",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 7",
              "equipped_avatar_border": null,
              "goals_conceded": 17,
              "goals_scored": 23,
              "id": "p7",
              "kyc_verified": false,
              "losses": 7,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 860,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player7",
              "wins": 5,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player8",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 8",
              "equipped_avatar_border": null,
              "goals_conceded": 18,
              "goals_scored": 22,
              "id": "p8",
              "kyc_verified": false,
              "losses": 8,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 840,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player8",
              "wins": 4,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": "2026-09-01T00:00:00Z",
              "display_name": null,
              "equipped_avatar_border": null,
              "goals_conceded": 19,
              "goals_scored": 21,
              "id": "p9",
              "kyc_verified": true,
              "losses": 9,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 820,
              "total_matches": 12,
              "total_titles": 0,
              "username": null,
              "wins": 3,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player10",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 10",
              "equipped_avatar_border": null,
              "goals_conceded": 20,
              "goals_scored": 20,
              "id": "p10",
              "kyc_verified": false,
              "losses": 0,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 800,
              "total_matches": 0,
              "total_titles": 0,
              "username": "player10",
              "wins": 0,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-01T00:00:00Z",
              "deleted_at": "2026-09-02T00:00:00Z",
              "display_name": "Ghost",
              "equipped_avatar_border": null,
              "goals_conceded": 5,
              "goals_scored": 3,
              "id": "p11",
              "losses": 2,
              "membership_tier": "recruit",
              "sentinel_tier": "developing",
              "sx_score": 700,
              "total_matches": 3,
              "total_titles": 0,
              "username": "ghost",
              "wins": 1,
              "xp": 10,
            },
          },
          "t": "PlayerCard",
        },
      ],
      "props": {
        "className": "space-y-2",
      },
      "t": "div",
    },
  ],
  "props": {
    "className": "mx-auto max-w-2xl px-4 pb-20 pt-6",
  },
  "t": "div",
}
`;

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > no query, signed in: the viewer is excluded (neq in the query log) > queries 1`] = `
[
  "profiles:select|neq(id)",
]
`;

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > no query, signed in: the viewer is excluded (neq in the query log) > tree 1`] = `
{
  "children": [
    {
      "children": "Players",
      "props": {
        "className": "mb-6 text-xl font-black text-white",
      },
      "t": "h1",
    },
    {
      "children": {
        "children": null,
        "props": {
          "className": "w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-sm text-white placeholder:text-slate-600 focus:border-violet-500 focus:outline-none",
          "defaultValue": "",
          "name": "q",
          "placeholder": "Search by username or name…",
          "type": "search",
        },
        "t": "input",
      },
      "props": {
        "action": "/players",
        "className": "mb-6",
      },
      "t": "form",
    },
    {
      "children": [
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player2",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 2",
              "equipped_avatar_border": null,
              "goals_conceded": 12,
              "goals_scored": 28,
              "id": "p2",
              "kyc_verified": false,
              "losses": 2,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 960,
              "total_matches": 12,
              "total_titles": 1,
              "username": "player2",
              "wins": 10,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player3",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 3",
              "equipped_avatar_border": null,
              "goals_conceded": 13,
              "goals_scored": 27,
              "id": "p3",
              "kyc_verified": true,
              "losses": 3,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 940,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player3",
              "wins": 9,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player4",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 4",
              "equipped_avatar_border": null,
              "goals_conceded": 14,
              "goals_scored": 26,
              "id": "p4",
              "kyc_verified": false,
              "losses": 4,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 920,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player4",
              "wins": 8,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player5",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 5",
              "equipped_avatar_border": null,
              "goals_conceded": 15,
              "goals_scored": 25,
              "id": "p5",
              "kyc_verified": false,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 900,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player5",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player6",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 6",
              "equipped_avatar_border": null,
              "goals_conceded": 16,
              "goals_scored": 24,
              "id": "p6",
              "kyc_verified": true,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 880,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player6",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player7",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 7",
              "equipped_avatar_border": null,
              "goals_conceded": 17,
              "goals_scored": 23,
              "id": "p7",
              "kyc_verified": false,
              "losses": 7,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 860,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player7",
              "wins": 5,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player8",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 8",
              "equipped_avatar_border": null,
              "goals_conceded": 18,
              "goals_scored": 22,
              "id": "p8",
              "kyc_verified": false,
              "losses": 8,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 840,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player8",
              "wins": 4,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": "2026-09-01T00:00:00Z",
              "display_name": null,
              "equipped_avatar_border": null,
              "goals_conceded": 19,
              "goals_scored": 21,
              "id": "p9",
              "kyc_verified": true,
              "losses": 9,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 820,
              "total_matches": 12,
              "total_titles": 0,
              "username": null,
              "wins": 3,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player10",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 10",
              "equipped_avatar_border": null,
              "goals_conceded": 20,
              "goals_scored": 20,
              "id": "p10",
              "kyc_verified": false,
              "losses": 0,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 800,
              "total_matches": 0,
              "total_titles": 0,
              "username": "player10",
              "wins": 0,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-01T00:00:00Z",
              "deleted_at": "2026-09-02T00:00:00Z",
              "display_name": "Ghost",
              "equipped_avatar_border": null,
              "goals_conceded": 5,
              "goals_scored": 3,
              "id": "p11",
              "losses": 2,
              "membership_tier": "recruit",
              "sentinel_tier": "developing",
              "sx_score": 700,
              "total_matches": 3,
              "total_titles": 0,
              "username": "ghost",
              "wins": 1,
              "xp": 10,
            },
          },
          "t": "PlayerCard",
        },
      ],
      "props": {
        "className": "space-y-2",
      },
      "t": "div",
    },
  ],
  "props": {
    "className": "mx-auto max-w-2xl px-4 pb-20 pt-6",
  },
  "t": "div",
}
`;

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > with a search term the ilike filter is one recorded or() > queries 1`] = `
[
  "profiles:select|or",
]
`;

exports[`players directory page — characterization (pins current behavior; must not change during extraction) > with a search term the ilike filter is one recorded or() > tree 1`] = `
{
  "children": [
    {
      "children": "Players",
      "props": {
        "className": "mb-6 text-xl font-black text-white",
      },
      "t": "h1",
    },
    {
      "children": {
        "children": null,
        "props": {
          "className": "w-full rounded-lg border border-slate-700 bg-slate-950 px-3 py-2 text-sm text-white placeholder:text-slate-600 focus:border-violet-500 focus:outline-none",
          "defaultValue": "play",
          "name": "q",
          "placeholder": "Search by username or name…",
          "type": "search",
        },
        "t": "input",
      },
      "props": {
        "action": "/players",
        "className": "mb-6",
      },
      "t": "form",
    },
    {
      "children": [
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player1",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 1",
              "equipped_avatar_border": null,
              "goals_conceded": 11,
              "goals_scored": 29,
              "id": "p1",
              "kyc_verified": false,
              "losses": 1,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 980,
              "total_matches": 12,
              "total_titles": 1,
              "username": "player1",
              "wins": 11,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player2",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 2",
              "equipped_avatar_border": null,
              "goals_conceded": 12,
              "goals_scored": 28,
              "id": "p2",
              "kyc_verified": false,
              "losses": 2,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 960,
              "total_matches": 12,
              "total_titles": 1,
              "username": "player2",
              "wins": 10,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player3",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 3",
              "equipped_avatar_border": null,
              "goals_conceded": 13,
              "goals_scored": 27,
              "id": "p3",
              "kyc_verified": true,
              "losses": 3,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 940,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player3",
              "wins": 9,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player4",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 4",
              "equipped_avatar_border": null,
              "goals_conceded": 14,
              "goals_scored": 26,
              "id": "p4",
              "kyc_verified": false,
              "losses": 4,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 920,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player4",
              "wins": 8,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player5",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 5",
              "equipped_avatar_border": null,
              "goals_conceded": 15,
              "goals_scored": 25,
              "id": "p5",
              "kyc_verified": false,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 900,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player5",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player6",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 6",
              "equipped_avatar_border": null,
              "goals_conceded": 16,
              "goals_scored": 24,
              "id": "p6",
              "kyc_verified": true,
              "losses": 5,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 880,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player6",
              "wins": 7,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player7",
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 7",
              "equipped_avatar_border": null,
              "goals_conceded": 17,
              "goals_scored": 23,
              "id": "p7",
              "kyc_verified": false,
              "losses": 7,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 860,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player7",
              "wins": 5,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player8",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 8",
              "equipped_avatar_border": null,
              "goals_conceded": 18,
              "goals_scored": 22,
              "id": "p8",
              "kyc_verified": false,
              "losses": 8,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 840,
              "total_matches": 12,
              "total_titles": 0,
              "username": "player8",
              "wins": 4,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": "2026-09-01T00:00:00Z",
              "display_name": null,
              "equipped_avatar_border": null,
              "goals_conceded": 19,
              "goals_scored": 21,
              "id": "p9",
              "kyc_verified": true,
              "losses": 9,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 820,
              "total_matches": 12,
              "total_titles": 0,
              "username": null,
              "wins": 3,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": "Bio of player10",
              "country": "GH",
              "created_at": "2026-01-15T09:00:00Z",
              "deleted_at": null,
              "display_name": "Player 10",
              "equipped_avatar_border": null,
              "goals_conceded": 20,
              "goals_scored": 20,
              "id": "p10",
              "kyc_verified": false,
              "losses": 0,
              "membership_tier": "guardian",
              "sentinel_tier": "trusted",
              "sx_score": 800,
              "total_matches": 0,
              "total_titles": 0,
              "username": "player10",
              "wins": 0,
              "xp": 1500,
            },
          },
          "t": "PlayerCard",
        },
        {
          "children": null,
          "props": {
            "player": {
              "avatar_url": null,
              "bio": null,
              "country": "NG",
              "created_at": "2026-01-01T00:00:00Z",
              "deleted_at": "2026-09-02T00:00:00Z",
              "display_name": "Ghost",
              "equipped_avatar_border": null,
              "goals_conceded": 5,
              "goals_scored": 3,
              "id": "p11",
              "losses": 2,
              "membership_tier": "recruit",
              "sentinel_tier": "developing",
              "sx_score": 700,
              "total_matches": 3,
              "total_titles": 0,
              "username": "ghost",
              "wins": 1,
              "xp": 10,
            },
          },
          "t": "PlayerCard",
        },
      ],
      "props": {
        "className": "space-y-2",
      },
      "t": "div",
    },
  ],
  "props": {
    "className": "mx-auto max-w-2xl px-4 pb-20 pt-6",
  },
  "t": "div",
}
`;
